--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,30 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
-  <!-- Social Cards -->
-  <!-- Twitter Cards -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@AngryPenguins_" />
-  <meta name="twitter:creator" content="@AngryPenguins_" />
-  <meta name="twitter:title" content="Angry Penguins Colony" />
-  <meta name="twitter:description" content="" />
-  <meta name="twitter:image" content="https://angrypenguinscolony.com/social.png" />
 
-  <!-- Other Cards -->
-  <meta property="og:url" content="https://angrypenguinscolony.com" />
-  <meta property=" og:title" content="Angry Penguins Colony" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="https://angrypenguinscolony.com/social.png" />
-
+  <!-- HTML Meta Tags -->
   <title>Angry Penguins Colony</title>
+  <meta name="description" content="Discover the first customizable NFT collection of the Elrond Network.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://angrypenguinscolony.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Angry Penguins Colony">
+  <meta property="og:description" content="Discover the first customizable NFT collection of the Elrond Network.">
+  <meta property="og:image" content="https://angrypenguinscolony.com/social.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="angrypenguinscolony.com">
+  <meta property="twitter:url" content="https://angrypenguinscolony.com/">
+  <meta name="twitter:title" content="Angry Penguins Colony">
+  <meta name="twitter:description" content="Discover the first customizable NFT collection of the Elrond Network.">
+  <meta name="twitter:image" content="https://angrypenguinscolony.com/social.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 </head>
 
 <body>
