--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,15 @@
   <meta name="twitter:image" content="https://angrypenguinscolony.com/social.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8S1FH3LDYV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8S1FH3LDYV');
+  </script>
 
 </head>
 
