--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
 
   <!-- HTML Meta Tags -->
   <title>Angry Penguins Colony</title>
-  <meta name="description" content="Discover the first customizable NFT collection of the Elrond Network.">
+  <meta name="description" content="Discover the first customizable NFT collection of the MultiversX Blockchain.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://angrypenguinscolony.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Angry Penguins Colony">
-  <meta property="og:description" content="Discover the first customizable NFT collection of the Elrond Network.">
+  <meta property="og:description" content="Discover the first customizable NFT collection of the MultiversX Blockchain.">
   <meta property="og:image" content="https://angrypenguinscolony.com/social.png">
 
   <!-- Twitter Meta Tags -->
@@ -25,7 +25,7 @@
   <meta property="twitter:domain" content="angrypenguinscolony.com">
   <meta property="twitter:url" content="https://angrypenguinscolony.com/">
   <meta name="twitter:title" content="Angry Penguins Colony">
-  <meta name="twitter:description" content="Discover the first customizable NFT collection of the Elrond Network.">
+  <meta name="twitter:description" content="Discover the first customizable NFT collection of the MultiversX Blockchain.">
   <meta name="twitter:image" content="https://angrypenguinscolony.com/social.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
